After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672774 - Totem doesn't compatible with input method (input method failes to activate due to space key taken by totem's "Play/Pause")
Totem doesn't compatible with input method (input method failes to activate d...
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-03-24 22:35 UTC by V字龍(Vdragon)
Modified: 2012-03-26 15:28 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description V字龍(Vdragon) 2012-03-24 22:35:30 UTC
Currently tested with H.I.M.E. input method (http://hime.luna.com.tw), but I think other input methods affected as well.

The spacebar key event is apparently take by totem for "Play/Pause" function and doesn't grabbed by input method to detect Ctrl-Space (which is the activation key combination for most of the input methods)

Notice that this bug affect to all users using input method (especially in CJK regions)


More precisely this problem happens when an user tried to search a youtube video (search bar)
Comment 1 V字龍(Vdragon) 2012-03-24 22:51:27 UTC
H.I.M.E. input method upstream bug report : https://github.com/caleb-/hime/issues/323

testcase Environment:
Linux Mint Lisa 12(Using Ubuntu 11.10 repository) 32-bit
totem : 3.0.1
K Desktop Environment
H.I.M.E. 0.9.9

Information about input method (badly edited):
https://docs.google.com/document/d/1HB3juffu0KgSUyg15y8hBZOLcJdHK9KDVPFyCwqHh-I/edit
Comment 2 Bastien Nocera 2012-03-26 15:28:56 UTC
commit 3470f761adcae844fc4562a5cf6affbbaefd9c6f
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Mar 26 16:42:26 2012 +0200

    main: Don't handle Ctrl+Space
    
    Ctrl+Space is used for IM switching.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=672774