main: Don't handle Ctrl+Space

Ctrl+Space is used for IM switching.

https://bugzilla.gnome.org/show_bug.cgi?id=672774